blurry text :bug: fix

--- a/public/styles/dashboard.css
+++ b/public/styles/dashboard.css
@@ -28,20 +28,30 @@ header {
 
 .company-summary {
     display: grid;
+    position: relative;
     grid-template-areas:
         "info info status";
     grid-area: company;
-    backdrop-filter: blur(25px);
     margin: auto;
     box-shadow: var(--shadow);
     border-radius: var(--object-radius);
-    background-image: linear-gradient(-120deg, rgba(53, 52, 56, 0.3), rgba(56, 18, 82, 0.3));
-    background-size: 24px 24px;
-    background-color: transparent;
     padding: 1.5em;
     width: 70%;
     height: 350px;
 
+    .company-background{
+        position: absolute;
+        top: 0;
+        right: 0;
+        z-index: -1;
+        backdrop-filter: blur(25px); 
+        border-radius: var(--object-radius);
+        background-image: linear-gradient(-120deg, rgba(53, 52, 56, 0.3), rgba(56, 18, 82, 0.3));
+        background-size: 24px 24px;
+        background-color: transparent;
+        width: 100%;
+        height: 100%;
+    }
     .company-information {
         grid-area: info;
         padding: 1em;
@@ -77,17 +87,26 @@ header {
 
 .stakeholder{
     display: inline-block;
-    backdrop-filter: blur(100px);
+    position: relative;
     margin: 8px;
     box-shadow: var(--shadow);
     border-radius: var(--object-radius);
-    background-image: linear-gradient(120deg, rgba(53, 56, 61, 0.3),rgba(18, 83, 78, 0.3));
-    background-color: transparent;
     padding: 16px;
     width: 300px;
     height: 300px;
     overflow: hidden;
 
+    .stakeholder-background{
+        position: absolute;
+        top: 0;
+        right: 0;
+        z-index: -1;
+        background-image: linear-gradient(120deg, rgba(53, 56, 61, 0.3),rgba(18, 83, 78, 0.3));
+        background-color: transparent;
+        backdrop-filter: blur(100px);
+        width: 100%;
+        height: 100%;
+    }
     .stakeholder-status{
         margin-top: 2em;
         margin-inline: 3em;
@@ -109,8 +128,8 @@ header {
 
     .edit{
         position: absolute;
-        bottom: 0;
         right: 0;
+        bottom: 0;
         float: right;
         border: none;
         border-radius: 8px 0 8px 0 ;
